# Tic-Tac-Toe

./: CMakeLists.txt  README.md
tic-tac-toe/: main.cpp
tic-tac-toe/include/: Bot.h  bot.h  cell.h  draw.h  game.h  global_variables.h
tic-tac-toe/src/: Bot.cpp  bot.cpp  cell.cpp  draw.cpp  game.cpp
